# cazdo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  dist-workspace.toml  justfile
.github/workflows/: ci.yml  conventional-commits.yml  release-notes.yml  release.yml  update-migration-smoke.yml  validate-release-tag.yml
assets/: cazdo.ans
docs/superpowers/plans/: 2026-03-25-wi-preview-length.md
docs/superpowers/specs/: 2026-03-25-wi-preview-length-design.md
docs/tapes/: README.md  cazdo-open-nav.tape  demo-work-items.json
scripts/: check-release-pr.sh  cleanup-vhs-demo-repos.sh  extract-release-notes.sh  prepare-release.sh  render-demo.sh  setup-vhs-demo-repo.sh
src/: art.rs  azure_devops.rs  cli.rs  commands.rs  config.rs  git.rs  main.rs  pattern.rs  tui.rs
src/azure_devops/: client.rs  codec.rs  fixture.rs  live.rs  mod.rs  work_item.rs
src/cli/: mod.rs
src/config/: mod.rs  settings.rs
src/git/: fixture.rs  mod.rs  repo.rs
src/tui/: actions.rs  app.rs  background.rs  event.rs  html_render.rs  input.rs  markdown_render.rs  mod.rs  theme.rs  ui.rs
src/tui/app/: branch_filter.rs  filtering.rs  load_state.rs  selection.rs  status.rs
src/tui/ui/: branch_info.rs  branches.rs  details.rs  footer.rs  helpers.rs  popup.rs
src/ui/: mod.rs  output.rs
tests/: release_scripts.rs
