[package]
name = "cazdo"
version = "0.1.13"
edition = "2024"
description = "Azure DevOps CLI tool for work item and branch management"
repository = "https://github.com/FelixDamrau/cazdo.git"
authors = ["Felix Damrau"]

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }

# HTTP client for Azure DevOps API
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Git operations
git2 = "0.19"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Cross-platform config directories
directories = "6"

# Error handling
anyhow = "1"

# Date/time handling
chrono = "0.4"
chrono-humanize = "0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
